# mc_sim

./: Cargo.toml  LICENSE-MIT  LICENSE-WTFPL  readme.md
data/: barters.csv  blazes.csv  readme.md
examples/: blaze_rod_distribution.rs  ender_pearl_distribution.rs  simulate_streams_til_dreams.rs
src/: drop.rs  drop_list.rs  error.rs  lib.rs  run.rs  sim.rs  stats.rs  stream.rs
